--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>F1 Cash — Simple Business Funding</title>
-  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
+  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses with clear monthly payments and no collateral." />
+  <meta name="robots" content="index,follow" />
+  <meta name="color-scheme" content="dark light" />
+  <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="F1 Cash — Simple Business Funding">
+  <meta property="og:description" content="Fast working capital for small businesses. Clear monthly payments. No collateral.">
+  <meta property="og:image" content="/assets/og-card.jpg">
+  <meta property="og:url" content="https://f1cash.net/">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Icons (optional: provide your files) -->
+  <link rel="icon" href="/assets/favicon.ico">
+  <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
+
   <!-- Futuristic fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
   <style>
     /* ---------- THEME ---------- */
     :root{
       --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640;
       --ink:#e6ecff; --muted:#92a0c5;
       --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
+      --focus:#b3e1ff;
     }
+
     /* ---------- RESET / QUALITY ---------- */
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
@@ -26,13 +45,18 @@
         radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
       overflow-x:hidden;
-      /* text quality */
+
       font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
       text-rendering:optimizeLegibility;
     }
-    /* subtle animated ambience */
+
+    /* Skip link for a11y */
+    .skip-link{position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden}
+    .skip-link:focus{left:16px;top:16px;width:auto;height:auto;background:#000;color:#fff;padding:10px 14px;border-radius:10px;z-index:10000}
+
+    /* ambient sheen */
     body::before{
       content:""; position:fixed; inset:-20% -20% -20% -20%; pointer-events:none; z-index:-1;
       background:
@@ -47,6 +71,7 @@
       50%{transform:translate3d(-2%,1%,0) scale(1.02)}
       100%{transform:translate3d(2%,-1%,0) scale(1.02)}
     }
+
     /* ---------- SPLASH (logo only) ---------- */
     .splash{
       position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
@@ -56,28 +81,32 @@
       transition:opacity .6s ease, visibility .6s ease;
     }
     .splash__logo{
-      width:128px; height:auto; border-radius:22px;
-      box-shadow:0 16px 36px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
-      animation:logoPulse 1.2s ease-in-out infinite;
+      width:220px; height:auto; border-radius:22px;
+      box-shadow:0 0 50px rgba(17,177,255,.45), 0 0 0 2px rgba(255,255,255,.08) inset;
+      animation:logoPulse 1.4s ease-in-out infinite;
     }
     @keyframes logoPulse{
-      0%,100%{transform:translateY(0) scale(1); filter:drop-shadow(0 6px 12px rgba(0,0,0,.35))}
-      50%{transform:translateY(-2px) scale(1.02); filter:drop-shadow(0 10px 18px rgba(0,0,0,.45))}
+      0%,100%{transform:scale(1); filter:drop-shadow(0 0 22px rgba(17,177,255,.38))}
+      50%{transform:scale(1.14); filter:drop-shadow(0 0 44px rgba(17,177,255,.65))}
     }
     .splash.is-hidden{opacity:0; visibility:hidden}
     @media (prefers-reduced-motion: reduce){
       .splash__logo{animation:none}
       .splash{transition:none}
     }
+
     /* ---------- LAYOUT ---------- */
     .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%;opacity:0;transform:translateY(8px);transition:opacity .6s ease, transform .6s ease}
     .app-ready .wrap{opacity:1;transform:none}
+
     header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
+
     /* Logo block */
     .logo img{
       width:94px;height:auto;border-radius:18px;
-      box-shadow:0 10px 24px rgba(17,177,255,.22); /* soft single glow */
+      box-shadow:0 10px 24px rgba(17,177,255,.22);
     }
+
     .logo-text h1{
       font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
       background:linear-gradient(90deg,var(--accent),var(--accent2));
@@ -87,6 +116,7 @@
     }
     @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     .logo-text p{color:var(--muted);font-size:13px}
+
     main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
     .content{flex:1 1 460px}
     h2{
@@ -99,13 +129,20 @@
     p{color:#b6c3da;line-height:1.6;margin-bottom:22px;font-size:1.05rem}
     ul{list-style:disc;margin-left:20px;margin-bottom:22px}
     li{margin-bottom:8px}
+
+    .cta-row{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
+
     .apply-btn{
-      display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;
+      display:inline-flex;align-items:center;gap:10px;
+      background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;
       padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;
       box-shadow:0 10px 26px rgba(17,177,255,.28);
-      cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif;
+      font-family:'Orbitron',sans-serif;
+      border:0; cursor:not-allowed; opacity:.78;
     }
-    .note{font-size:12.5px;color:var(--muted);margin-top:8px}
+    .apply-btn[aria-disabled="true"]:focus-visible{outline:2px solid var(--focus); outline-offset:3px}
+    .note{font-size:12.5px;color:var(--muted)}
+
     /* Terms card */
     .card{
       flex:1 1 330px;background:linear-gradient(180deg,#0e1322,#0d1220);
@@ -116,10 +153,33 @@
     .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
     .label{color:var(--muted);font-size:13px}
     .value{font-weight:700}
-    /* Icons (inline SVG sizing) */
-    .icon{width:16px;height:16px;display:inline-block;vertical-align:-2px}
+
+    /* Icons */
+    .icon{width:16px;height:16px;display:inline-block;vertical-align:-2px;color:#9ecaff}
     .icon svg{width:16px;height:16px;display:block}
-    /* ---------- FOOTER (premium) ---------- */
+
+    /* Futuristic contact links */
+    .contact-link{
+      --ring: rgba(17,177,255,.45);
+      position:relative; display:inline-flex; align-items:center; gap:10px;
+      padding:8px 12px; border-radius:12px; text-decoration:none; font-weight:800;
+      background:linear-gradient(180deg, rgba(17,177,255,.08), rgba(17,177,255,.03));
+      border:1px solid rgba(17,177,255,.26);
+      color:#cfe9ff;
+      box-shadow:inset 0 0 0 1px rgba(255,255,255,.05), 0 10px 24px rgba(0,0,0,.25);
+      transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease, background .18s ease;
+    }
+    .contact-link .glyph{width:18px;height:18px;display:grid;place-items:center;color:#aee2ff}
+    .contact-link:hover{
+      transform:translateY(-1px);
+      background:linear-gradient(180deg, rgba(17,177,255,.14), rgba(17,177,255,.06));
+      border-color:rgba(17,177,255,.55);
+      box-shadow:0 0 0 6px rgba(17,177,255,.06), 0 20px 48px rgba(0,0,0,.35);
+    }
+    .contact-link:focus-visible{outline:2px solid var(--focus); outline-offset:3px}
+    .contact-link .text{background:linear-gradient(90deg,#e6f5ff,#7ed8ff);-webkit-background-clip:text;background-clip:text;color:transparent}
+
+    /* ---------- FOOTER ---------- */
     footer{
       position:relative; z-index:1;
       display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
@@ -133,13 +193,17 @@
       background:linear-gradient(90deg,transparent,var(--accent),transparent);
       opacity:.65;
     }
-    footer a{color:var(--ink); position:relative}
+    footer a{color:var(--ink); position:relative; text-decoration:none}
     footer a::after{
       content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
       background:linear-gradient(90deg,transparent,var(--accent),transparent);
       transform:scaleX(0); transform-origin:center; transition:transform .3s ease;
     }
     footer a:hover::after{transform:scaleX(1)}
+
+    /* Focus visibility */
+    a:focus-visible, button:focus-visible{outline:2px solid var(--focus);outline-offset:3px;border-radius:10px}
+
     /* ---------- RESPONSIVE ---------- */
     @media (max-width:960px){
       .wrap{padding:24px 16px}
@@ -152,81 +216,123 @@
       .card{padding:18px}
     }
   </style>
+
+  <!-- Schema.org (FinancialService) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FinancialService",
+    "name": "F1 Cash",
+    "url": "https://f1cash.net/",
+    "description": "Fast working capital for small businesses with clear monthly payments.",
+    "email": "info@f1cash.net",
+    "telephone": "+1-229-448-4389",
+    "logo": "https://f1cash.net/assets/logo.png"
+  }
+  </script>
 </head>
 <body>
+  <a href="#main" class="skip-link">Skip to content</a>
+
   <!-- Splash: only the logo on load -->
   <div class="splash" id="splash" aria-hidden="true">
-    <img class="splash__logo" src="assets/logo.png" alt="">
+    <img class="splash__logo" src="assets/logo.png" width="220" height="220" alt="F1 Cash logo">
+    <noscript>
+      <style>.splash{display:none!important}</style>
+    </noscript>
   </div>
+
   <!-- Main content -->
   <div class="wrap" id="app">
-    <header>
-      <div class="logo"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
+    <header role="banner">
+      <div class="logo"><img src="assets/logo.png" width="94" height="94" alt="F1 Cash logo"></div>
       <div class="logo-text">
         <h1>F1 CASH</h1>
         <p>Simple Business Funding</p>
       </div>
     </header>
-    <main>
+
+    <main id="main" role="main" aria-labelledby="hero-title">
       <div class="content">
-        <h2>Fast working capital for small businesses</h2>
+        <h2 id="hero-title">Fast working capital for small businesses</h2>
         <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
         <ul>
           <li>Business owners with 12+ months in operation</li>
           <li>Simple promissory note after verification</li>
           <li>6 equal monthly installments</li>
         </ul>
-        <a class="apply-btn" title="Coming soon">APPLY NOW</a>
-        <p class="note">Button disabled for now — application link coming soon.</p>
+        <div class="cta-row">
+          <button class="apply-btn" type="button" aria-disabled="true" title="Coming soon" disabled>
+            <span aria-hidden="true">🚀</span> APPLY NOW
+          </button>
+          <p class="note" role="status">Button disabled for now — application link coming soon.</p>
+        </div>
       </div>
+
       <aside class="card" aria-label="At-a-glance terms">
         <h3>At-a-glance terms</h3>
+
         <div class="row">
           <span class="label">Typical advance</span>
           <span class="value">$300 – $1,000</span>
         </div>
+
         <div class="row">
           <span class="label">Schedule</span>
           <span class="value">6 monthly payments</span>
         </div>
+
         <div class="row">
           <span class="label">
             <span class="icon" aria-hidden="true">
-              <!-- Mail icon -->
-              <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="currentColor" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="currentColor" stroke-width="1.5"/></svg>
             </span> Support
           </span>
-          <span class="value"><a href="mailto:info@f1cash.net">info@f1cash.net</a></span>
+          <span class="value">
+            <a class="contact-link" href="mailto:info@f1cash.net" aria-label="Email support at info at f1cash dot net">
+              <span class="glyph" aria-hidden="true">
+                <svg viewBox="0 0 24 24" fill="none" width="18" height="18"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="currentColor" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="currentColor" stroke-width="1.5"/></svg>
+              </span>
+              <span class="text">info@f1cash.net</span>
+            </a>
+          </span>
         </div>
+
         <div class="row">
           <span class="label">
             <span class="icon" aria-hidden="true">
-              <!-- Phone icon -->
-              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="currentColor" stroke-width="1.5"/></svg>
             </span> Phone
           </span>
-          <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
+          <span class="value">
+            <a class="contact-link" href="tel:+12294484389" aria-label="Call phone number plus one two two nine four four eight four three eight nine">
+              <span class="glyph" aria-hidden="true">
+                <svg viewBox="0 0 24 24" fill="none" width="18" height="18"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="currentColor" stroke-width="1.5"/></svg>
+              </span>
+              <span class="text">+1 229-448-4389</span>
+            </a>
+          </span>
         </div>
       </aside>
     </main>
   </div>
+
   <!-- Footer (sticky, premium) -->
-  <footer>
+  <footer role="contentinfo">
     <div>
       <span class="icon" aria-hidden="true">
-        <!-- Mail icon -->
-        <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 2 2H5a2 2 0 0 1-2-2V7Z" stroke="currentColor" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="currentColor" stroke-width="1.5"/></svg>
       </span>
       &nbsp;<a href="mailto:info@f1cash.net">info@f1cash.net</a>
       &nbsp;&nbsp;·&nbsp;&nbsp;
       <span class="icon" aria-hidden="true">
-        <!-- Phone icon -->
-        <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="currentColor" stroke-width="1.5"/></svg>
       </span>
       &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
     </div>
-    <div>© 2025 F1 Cash · All rights reserved.</div>
+    <div>© <span id="year">2025</span> F1 Cash · All rights reserved.</div>
   </footer>
+
   <!-- Tiny splash controller -->
   <script>
     (function(){
@@ -236,14 +342,12 @@
         document.body.classList.add('app-ready');
         if(splash) splash.classList.add('is-hidden');
       }
-      reduce ? reveal() : setTimeout(reveal, 1000);
+      reduce ? reveal() : setTimeout(reveal, 900);
+
+      // Set current year in footer
+      var y = document.getElementById('year');
+      if(y){ y.textContent = new Date().getFullYear(); }
     })();
   </script>
 </body>
 </html>
-
-
-
-
-
-
